--- a/BTL_2.html
+++ b/BTL_2.html
@@ -17,8 +17,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto" id="nav-links">
-                    <li class="nav-item"><a class="nav-link" href="#" onclick="showContent('login')">Đăng nhập</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#" onclick="showContent('register')">Đăng ký</a></li>
+                    <!-- Các liên kết điều hướng sẽ được cập nhật ở đây thông qua JavaScript -->
                 </ul>
             </div>
         </div>
@@ -33,7 +32,7 @@
 
     <!-- Bootstrap JS and dependencies -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/dist/js/bootstrap.min.js"></script>
+    <script src="bootstrap-5.0.2-dist/js/bootstrap.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
